src/objects/teacher__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>teachers</relationshipLabel>
    <relationshipName>teachers</relationshipName>
    <type>Lookup</type>
</CustomField>