src/objects/teacher__c/fields/school__c.field-meta.xml
<CustomField>
    <fullName>school__c</fullName>
    <label>school</label>
    <referenceTo>school__c</referenceTo>
    <relationshipLabel>teachers</relationshipLabel>
    <relationshipName>teachers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>